--- a/gb/21/7/9/n13078583.md
+++ b/gb/21/7/9/n13078583.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/elibqk3256/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/elibqk3256/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/elibqk3256/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/elibqk3256/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/elibqk3256/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/elibqk3256/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>解家长困境 时代力量吁推托育场所解封指引</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年07月09日讯】（大纪元记者吴旻洲、常怀仁台湾台北报导）全国三级警戒延长到7月26日，但13日起微<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>。<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%8A%9B%E9%87%8F.md#1">时代力量</a>9日对<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>措施提出三点建议，强调微解封后劳工面对召回潮，政府开放电影院却未开放托育场所，让爸妈陷入困境，政府应在“托育相关场所解封指引”和“补助有薪防疫照顾假”，两种配套择一。</p>
-<p><ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%8A%9B%E9%87%8F.md#1">时代力量</a>党主席<ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>、发言人张卫航及智库执行长李兆立9日召开线上记者会，说明其参照国际经验下，提出三大微解封指引主张，包含：台湾疫苗覆盖率较低，解封指引应更谨慎明确；筛检阴性及疫苗接种证明，尽速制定一致系统及证明格式；托育场所解封防疫指引、有薪防疫照顾假，政府应尽速推动。</p>
-<p><ahref="https://github.com/elibqk3256/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>说，微解封是防疫、经济和民主之间的权衡，台湾该怎么拿捏，可参考其他国家的解封指引，冰岛的疫苗覆盖率有76%，德国56%，法国51%。这些疫苗覆盖率越高的国家，解封的幅度越高，相较于台湾的疫苗覆盖率只有一成，政府在订定相关解封标准时要更谨慎。</p>
+<p>【大纪元2021年07月09日讯】（大纪元记者吴旻洲、常怀仁台湾台北报导）全国三级警戒延长到7月26日，但13日起微<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%8A%9B%E9%87%8F.md#1">时代力量</a>9日对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A7%A3%E5%B0%81.md#1">解封</a>措施提出三点建议，强调微解封后劳工面对召回潮，政府开放电影院却未开放托育场所，让爸妈陷入困境，政府应在“托育相关场所解封指引”和“补助有薪防疫照顾假”，两种配套择一。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%B6%E4%BB%A3%E5%8A%9B%E9%87%8F.md#1">时代力量</a>党主席<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>、发言人张卫航及智库执行长李兆立9日召开线上记者会，说明其参照国际经验下，提出三大微解封指引主张，包含：台湾疫苗覆盖率较低，解封指引应更谨慎明确；筛检阴性及疫苗接种证明，尽速制定一致系统及证明格式；托育场所解封防疫指引、有薪防疫照顾假，政府应尽速推动。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%99%88%E6%A4%92%E5%8D%8E.md#1">陈椒华</a>说，微解封是防疫、经济和民主之间的权衡，台湾该怎么拿捏，可参考其他国家的解封指引，冰岛的疫苗覆盖率有76%，德国56%，法国51%。这些疫苗覆盖率越高的国家，解封的幅度越高，相较于台湾的疫苗覆盖率只有一成，政府在订定相关解封标准时要更谨慎。</p>
 <p>李兆立表示，从国外经验可发现，有些重要解封措施，并未出现在台湾的微解封指引上，例如美国要求参加室内外活动达一定人数时，要有疫苗接种或筛检阴性的证明，法国参加大型活动也会要求疫苗接种或筛检阴性，韩国则以疫苗接种情况，做为开放幅度的参考依据。</p>
 <p>李兆立说，虽然政府已在做数位疫苗证明，包含核酸检测（PCR）在内有8种筛检方式，但阴性证明长什么样，厂商未必清楚，希望指挥中心制定一致的格式或标准、便利查询的系统，像是法国的“健康通行证”在网路登记后，扫QR Code就知道是否符合资格，希望建立一致的表格，包含疫苗接种、快筛阴性的证明等。</p>
 <p>张卫航则说，疫情趋缓后很多企业逐步召回员工，但当前正值暑假期间，微解封指引开放了电影院等娱乐场所，却不包括托儿所、安亲班、夏令营，小孩照顾问题不解决，家长无法安心上班，让家长们陷入困境。</p>
@@ -18,47 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076182.md#1">每日新增病例逾两万 英国为何继续解封？</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076284.md#1">三级延长微解封 新竹市动物园入园上限1500人</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076411.md#1">嘉义市13日微解封 营业场所及民众生活规范</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076490.md#1">疫情警戒延长 徐榛蔚：花莲微解封范围待公告</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076578.md#1">微解封想出门  林右昌宣布景点松绑措施</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13078586.md#1">台宗教场所有条件开放 陈宗彦：须先提报防疫计划</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13078612.md#1">江启臣：防微解封之乱  苏贞昌：随时滚动检讨</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13078103.md#1">台湾7/9增32例本土病例 12例死亡</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13075907.md#1">台湾驻海地大使馆遭潜入 11名武装分子被捕</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13076998.md#1">美台同声高喊“反台独”学者研判：两件事未来不会发生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/8/n13076182.md#1">每日新增病例逾两万 英国为何继续解封？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/8/n13076284.md#1">三级延长微解封 新竹市动物园入园上限1500人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/8/n13076411.md#1">嘉义市13日微解封 营业场所及民众生活规范</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/8/n13076490.md#1">疫情警戒延长 徐榛蔚：花莲微解封范围待公告</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/8/n13076578.md#1">微解封想出门  林右昌宣布景点松绑措施</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680953.md#1">台本土＋33  17条待厘清传播链</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680950.md#1">晋见蔡英文 NED会长：台湾民主是全球典范</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680958.md#1">台宗教绕境须打满3剂疫苗 禁钻轿脚、抢轿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680821.md#1">俄拟立法限不友善国家人民入境 台外交部：评估影响范围</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678778.md#1">台国安局长陈明通：乌俄冲突或长期化 边打边谈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/25/n10809395.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/6/14/n13020872.md#1">【命理】彼此等候三十年的夫妻 结局夫荣妻贵</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/2/n13064296.md#1">【未解之谜】绝不能动的中国文物</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13073533.md#1">死亡20分钟灵魂出窍的经验 改变他的一生</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/6/26/n13049744.md#1">观画不悟 宋朝宰相错失道缘</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/1/n13061464.md#1">【未解之谜】唐山大地震生还者的濒死体验</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074878.md#1">高血压3原因？中医教你降压 有时比降压药有效</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13075674.md#1">【有冇搞错】美国中国科技股会一直跌下去</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076229.md#1">【唐浩视界】中共再喊犯台？美布局五大战线</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074809.md#1">【远见快评】习近平发亡党之音？日相一语惊人</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074268.md#1">中国太太再打人 比利时大使被要求立刻回国</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072561.md#1">59岁刘德华从影40年 自曝最后悔拍一部电影</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072561.md#1">59岁刘德华从影40年 自曝最后悔拍一部电影</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074748.md#1">黄秋生遭台湾节目撤换？制作单位详尽回应</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13072394.md#1">江一燕两度拒拍一部戏 成就刘诗诗爆红及姻缘</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074584.md#1">秦岚家中冰箱贴封条 自律留言笑翻网友</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/8/n13076834.md#1">江宏杰福原爱协议离婚 共同监护一对儿女</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13071655.md#1">营养师的强力护眼配方：喝一杯有5种好处</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13071217.md#1">蛀牙竟与血糖有关！这些食物降糖、防蛀牙</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13074878.md#1">高血压3原因？中医教你降压 有时比降压药有效</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/7/n13073533.md#1">死亡20分钟灵魂出窍的经验 改变他的一生</a></li>
-<li><a href="https://github.com/elibqk3256/djy/blob/master/gb/21/7/6/n13071486.md#1">【直播】膝关节退化？3招保养 甩掉膝盖痛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/elibqk3256/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/elibqk3256/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/9/n13078583.htm">解家长困境 时代力量吁推托育场所解封指引</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/9/n13078583.htm">解家长困境 时代力量吁推托育场所解封指引</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/elibqk3256/djy/blob/master/gb/21/7/9/n13078583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/elibqk3256/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/elibqk3256/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/elibqk3256/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/elibqk3256/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/9/n13078583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
